# bank-transaction-tracker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  License.md  Pipfile  README.md  app.py  config.py  database_setup.py  demo_data.py  demo_db.py  docker-compose.demo.yml  docker-compose.development.yml  docker-compose.production.yml  docker-compose.yml  lib_common.py  manage.py  pyproject.toml  requirements.txt  run.py  web.py
btt/: app.py  config.py  database.py  email.py  forms.py  reports.py  views.py  wsgi.py
btt/auth/: views.py
btt/btt/: __init__.py  classification.py  database.py  email.py  errors.py  forms.py  password.py  reports.py  views.py
btt/static/: selectall.js
btt/templates/: 500.html  add_category.html  base.html  categories.html  modify_transaction.html  process_transactions.html  reports.html  upload_transactions.html
btt/tests/: __init__.py  conftest.py
migrations/versions/: 29c14f847280_more_indexes.py  59ab8d3aae7b_initial_migration.py  5d33ebe97576_initial_migration.py  (+4 more)
pft/: __init__.py  auths.py  categories.py  classification.py  database.py  demo_data.py  demo_db.py  errors.py  forms.py  password.py  reports.py  views.py  web.py
pft/auth/: forms.py  (+1 more)
static/: style.css
templates/: 500.html  accounts.html  accounts.xhtml  base.html  businesses.html  businesses.xhtml  categories.html  categories.xhtml  header.html  header.xhtml  home.html  home.xhtml  index.html  index.xhtml  login.html  modify_transaction.html  modify_transaction.xhtml  reports.html  reports.xhtml  transactions.html  transactions.xhtml
tests/: test_basics.py
(+87 files in other folders)
